engine/scripting/native_api/dse_api.h

// ============================================================
// API Version — 用于运行时 ABI 兼容性检测
// ============================================================

/// 返回 C ABI 版本号。每次 dse_api.h / dse_api.gen.h 的公共接口
/// 发生破坏性变更时递增。脚本宿主（Lua/C#）在加载 DLL 后应首先
/// 调用此函数，与编译时 DSE_API_VERSION 比较，不一致则拒绝运行。
///   格式：MMNNPP（Major * 10000 + Minor * 100 + Patch）
DSE_CAPI uint32_t dse_api_version(void);
#define DSE_API_VERSION 10000u   /* v1.0.0 — MMNNPP format */
// ============================================================
// Context Setup — 引擎初始化时调用一次
// ============================================================

DSE_CAPI void dse_native_api_init(
    void* world,           // World*
    void* asset_manager,   // AssetManager*
    void* audio_system,    // AudioSystem* (可为 nullptr)
    void  (*quit_fn)(void),
    void  (*set_title_fn)(const char*),
    float (*get_fps_fn)(void),
    void  (*set_fps_fn)(float),
    int   (*get_draw_calls_fn)(void)   // 可为 nullptr
);
// ============================================================
// TransformComponent
// ============================================================

DSE_CAPI void dse_transform_add(uint32_t e,
    float x, float y, float z,
    float sx, float sy, float sz);
// ============================================================
// Input
// ============================================================

DSE_CAPI int   dse_input_get_key(int key_code);
DSE_CAPI int   dse_input_get_key_down(int key_code);
DSE_CAPI int   dse_input_get_key_up(int key_code);
DSE_CAPI int   dse_input_get_mouse_button(int button);
DSE_CAPI int   dse_input_get_mouse_button_down(int button);
DSE_CAPI int   dse_input_get_mouse_button_up(int button);
DSE_CAPI float dse_input_get_mouse_x(void);
DSE_CAPI float dse_input_get_mouse_y(void);
DSE_CAPI float dse_input_get_mouse_scroll(void);
DSE_CAPI float dse_input_get_gamepad_axis(int gamepad_id, int axis);
// ============================================================
// Assets
// ============================================================

DSE_CAPI uint32_t dse_assets_load_texture(const char* path);
DSE_CAPI void     dse_assets_set_data_root(const char* path);
// ============================================================
// App / System
// ============================================================

DSE_CAPI void  dse_app_quit(void);
DSE_CAPI void  dse_app_set_window_title(const char* title);
DSE_CAPI float dse_app_get_time(void);
DSE_CAPI float dse_app_get_delta_time(void);
DSE_CAPI void  dse_app_set_target_fps(float fps);
DSE_CAPI float dse_app_get_target_fps(void);
// ============================================================
// Metrics
// ============================================================

DSE_CAPI int dse_metrics_get_draw_calls(void);
// ============================================================
// Audio（全局 AudioSystem + ECS AudioSource，手写 dse_api_services.cpp）
// ============================================================
// 全局函数依赖 dse_native_api_init 注入的 AudioSystem*，为 null 时安全返回 0/无操作。
// bool 参数/返回值使用 int(0/1)。

DSE_CAPI int  dse_audio_play_bgm(const char* path, float volume, int loop);
DSE_CAPI void dse_audio_pause_bgm(void);
DSE_CAPI void dse_audio_resume_bgm(void);
DSE_CAPI void dse_audio_stop_bgm(void);
DSE_CAPI int  dse_audio_crossfade_bgm(const char* path, float fade_sec, float volume, int loop);
DSE_CAPI void dse_audio_play_sfx(const char* path, float volume, int loop);
DSE_CAPI void dse_audio_stop_all_sfx(void);
DSE_CAPI void dse_audio_fade_out_all_sfx(float duration_sec);
DSE_CAPI int  dse_audio_preload(const char* path);
DSE_CAPI void dse_audio_set_master_volume(float volume);
DSE_CAPI void dse_audio_set_bgm_volume(float volume);
DSE_CAPI void dse_audio_set_sfx_volume(float volume);
// ECS AudioSource / AudioListener（纯组件操作）。
DSE_CAPI void dse_audio_source_add(uint32_t e, const char* path, int play_on_awake,
                                   int loop, float volume);
DSE_CAPI void dse_audio_source_set_playing(uint32_t e, int playing);
DSE_CAPI void dse_audio_source_restart(uint32_t e);
DSE_CAPI void dse_audio_source_set_loop(uint32_t e, int loop);
DSE_CAPI void dse_audio_source_set_volume(uint32_t e, float volume);
DSE_CAPI void dse_audio_source_set_pitch(uint32_t e, float pitch);
DSE_CAPI void dse_audio_source_set_3d_mode(uint32_t e, int enabled);
DSE_CAPI void dse_audio_source_set_3d_distance(uint32_t e, float min_distance,
                                               float max_distance, float rolloff);
DSE_CAPI void dse_audio_source_set_bus(uint32_t e, const char* bus_name);
DSE_CAPI int  dse_audio_source_is_playing(uint32_t e);
DSE_CAPI void dse_audio_listener_add(uint32_t e, int enabled);
// ============================================================
// ECS Core — 通用组件查询 / 层级 / 脚本 / AABB / 时间缩放
// ============================================================
// find_*：实体 id 写入 out（最多 cap 个），返回总数；组件名未知返回 -1。
// has_component：1/0；组件名未知返回 -1。
// queryable components：组件名以 '\n' 分隔写入 out，返回条数。

DSE_CAPI int  dse_ecs_find_entities_by_mesh_path(const char* mesh_path,
                                                 uint32_t* out, int cap);
DSE_CAPI int  dse_ecs_find_entities_with(const char* component, uint32_t* out, int cap);
DSE_CAPI int  dse_ecs_count_entities_with(const char* component);
DSE_CAPI int  dse_ecs_has_component(uint32_t e, const char* component);
DSE_CAPI int  dse_ecs_get_queryable_components(char* out, int cap);
// AABB：out_min_max={min_x,min_y,min_z,max_x,max_y,max_z}（float[6]）。返回 1=有 BoundingBox。
DSE_CAPI int  dse_ecs_get_world_aabb(uint32_t e, float* out_min_max);
DSE_CAPI int  dse_ecs_get_local_aabb(uint32_t e, float* out_min_max);
// TimeScaleComponent：get 无组件时返回 1.0。
DSE_CAPI void  dse_ecs_set_time_scale(uint32_t e, float scale);
DSE_CAPI float dse_ecs_get_time_scale(uint32_t e);
// Transform（position+scale 初始化，emplace_or_replace）
DSE_CAPI void dse_ecs_add_transform(uint32_t e, float x, float y, float z,
                                    float sx, float sy, float sz);
// ParentComponent。get_parent：无父级返回 0xFFFFFFFF。
DSE_CAPI void     dse_ecs_add_parent(uint32_t e, uint32_t parent);
DSE_CAPI void     dse_ecs_set_parent(uint32_t e, uint32_t parent);
DSE_CAPI uint32_t dse_ecs_get_parent(uint32_t e);
DSE_CAPI void     dse_ecs_clear_parent(uint32_t e);
// ScriptComponent。get_script_path/enabled：无组件返回 -1。
DSE_CAPI void dse_ecs_add_script(uint32_t e, const char* path);
DSE_CAPI void dse_ecs_set_script_path(uint32_t e, const char* path);
DSE_CAPI int  dse_ecs_get_script_path(uint32_t e, char* out, int cap);
DSE_CAPI void dse_ecs_set_script_enabled(uint32_t e, int enabled);
DSE_CAPI int  dse_ecs_get_script_enabled(uint32_t e);
// ============================================================
// UI（核心控件，纯 ECS 组件操作）
// ============================================================
// bool 参数/返回值使用 int(0/1)。

DSE_CAPI void  dse_ui_add_renderer(uint32_t e, uint32_t texture_handle,
                                   float r, float g, float b, float a,
                                   int order, float w, float h);
DSE_CAPI void  dse_ui_add_panel(uint32_t e, int blocks_input);
DSE_CAPI void  dse_ui_add_button(uint32_t e, float r, float g, float b, float a);
DSE_CAPI void  dse_ui_add_ttf_label(uint32_t e, const char* text, const char* font_id,
                                    float font_size, float r, float g, float b, float a);
DSE_CAPI void  dse_ui_set_label_text(uint32_t e, const char* text);
// ============================================================
// Extended Context Setup — 扩展上下文（metrics 回调 + floating origin）
// ============================================================

DSE_CAPI void dse_native_api_init_ext(
    int   (*get_max_batch_sprites_fn)(void),
    int   (*get_sprite_count_fn)(void),
    int   (*get_gpu_driven_active_fn)(void),
    int   (*get_gpu_indirect_draw_count_fn)(void),
    int   (*get_gpu_total_instances_fn)(void),
    void* floating_origin);