GameScripts/DSEngine.Runtime/Generated/NativeManual.gen.cs

// <auto-generated>
//   来源：tools/codegen/gen_csharp_manual.py ← engine/scripting/native_api/dse_api.h（手写 C ABI）
//   勿手动修改；新增手写 C ABI 后重新运行生成脚本。
// </auto-generated>

using System.Runtime.InteropServices;

namespace DSEngine;

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate int DseAiActionFn(float dt, nint userData);

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate int DseAiConditionFn(nint userData);

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void DseAiDestroyFn(nint userData);

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void DseCutsceneCameraFn(float px, float py, float pz, float lx, float ly, float lz, float fov, nint userData);

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void DseCutsceneEventFn(nint eventName, nint payload, nint userData);

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void DseCutsceneFinishFn(nint seqName, nint userData);


internal static partial class Native {
    /// <summary>编译时 C ABI 版本号（与 dse_api.h 中 DSE_API_VERSION 同步）</summary>
    internal const uint DSE_API_VERSION = 10000u;

    /// <summary>运行时版本检查：DLL 返回值 != DSE_API_VERSION 则 ABI 不兼容</summary>
    internal static bool IsApiCompatible() => dse_api_version() == DSE_API_VERSION;

    [LibraryImport(Lib, EntryPoint = "dse_api_version")]
    internal static partial uint dse_api_version();

    [LibraryImport(Lib, EntryPoint = "dse_transform_add")]
    internal static partial void dse_transform_add(uint e, float x, float y, float z, float sx, float sy, float sz);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_key")]
    internal static partial int dse_input_get_key(int keyCode);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_key_down")]
    internal static partial int dse_input_get_key_down(int keyCode);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_key_up")]
    internal static partial int dse_input_get_key_up(int keyCode);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_button")]
    internal static partial int dse_input_get_mouse_button(int button);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_button_down")]
    internal static partial int dse_input_get_mouse_button_down(int button);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_button_up")]
    internal static partial int dse_input_get_mouse_button_up(int button);

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_x")]
    internal static partial float dse_input_get_mouse_x();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_y")]
    internal static partial float dse_input_get_mouse_y();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_mouse_scroll")]
    internal static partial float dse_input_get_mouse_scroll();

    [LibraryImport(Lib, EntryPoint = "dse_input_get_gamepad_axis")]
    internal static partial float dse_input_get_gamepad_axis(int gamepadId, int axis);

    [LibraryImport(Lib, EntryPoint = "dse_assets_load_texture", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial uint dse_assets_load_texture(string path);

    [LibraryImport(Lib, EntryPoint = "dse_assets_set_data_root", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_assets_set_data_root(string path);

    [LibraryImport(Lib, EntryPoint = "dse_app_quit")]
    internal static partial void dse_app_quit();

    [LibraryImport(Lib, EntryPoint = "dse_app_set_window_title", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_app_set_window_title(string title);

    [LibraryImport(Lib, EntryPoint = "dse_app_get_time")]
    internal static partial float dse_app_get_time();

    [LibraryImport(Lib, EntryPoint = "dse_app_get_delta_time")]
    internal static partial float dse_app_get_delta_time();

    [LibraryImport(Lib, EntryPoint = "dse_app_set_target_fps")]
    internal static partial void dse_app_set_target_fps(float fps);

    [LibraryImport(Lib, EntryPoint = "dse_app_get_target_fps")]
    internal static partial float dse_app_get_target_fps();

    [LibraryImport(Lib, EntryPoint = "dse_metrics_get_draw_calls")]
    internal static partial int dse_metrics_get_draw_calls();

    [LibraryImport(Lib, EntryPoint = "dse_audio_play_bgm", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_audio_play_bgm(string path, float volume, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_audio_pause_bgm")]
    internal static partial void dse_audio_pause_bgm();

    [LibraryImport(Lib, EntryPoint = "dse_audio_resume_bgm")]
    internal static partial void dse_audio_resume_bgm();

    [LibraryImport(Lib, EntryPoint = "dse_audio_stop_bgm")]
    internal static partial void dse_audio_stop_bgm();

    [LibraryImport(Lib, EntryPoint = "dse_audio_crossfade_bgm", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_audio_crossfade_bgm(string path, float fadeSec, float volume, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_audio_play_sfx", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_audio_play_sfx(string path, float volume, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_audio_stop_all_sfx")]
    internal static partial void dse_audio_stop_all_sfx();

    [LibraryImport(Lib, EntryPoint = "dse_audio_fade_out_all_sfx")]
    internal static partial void dse_audio_fade_out_all_sfx(float durationSec);

    [LibraryImport(Lib, EntryPoint = "dse_audio_preload", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_audio_preload(string path);

    [LibraryImport(Lib, EntryPoint = "dse_audio_set_master_volume")]
    internal static partial void dse_audio_set_master_volume(float volume);

    [LibraryImport(Lib, EntryPoint = "dse_audio_set_bgm_volume")]
    internal static partial void dse_audio_set_bgm_volume(float volume);

    [LibraryImport(Lib, EntryPoint = "dse_audio_set_sfx_volume")]
    internal static partial void dse_audio_set_sfx_volume(float volume);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_audio_source_add(uint e, string path, int playOnAwake, int loop, float volume);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_set_playing")]
    internal static partial void dse_audio_source_set_playing(uint e, int playing);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_restart")]
    internal static partial void dse_audio_source_restart(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_set_loop")]
    internal static partial void dse_audio_source_set_loop(uint e, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_set_volume")]
    internal static partial void dse_audio_source_set_volume(uint e, float volume);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_set_pitch")]
    internal static partial void dse_audio_source_set_pitch(uint e, float pitch);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_set_3d_mode")]
    internal static partial void dse_audio_source_set_3d_mode(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_set_3d_distance")]
    internal static partial void dse_audio_source_set_3d_distance(uint e, float minDistance, float maxDistance, float rolloff);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_set_bus", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_audio_source_set_bus(uint e, string busName);

    [LibraryImport(Lib, EntryPoint = "dse_audio_source_is_playing")]
    internal static partial int dse_audio_source_is_playing(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_audio_listener_add")]
    internal static partial void dse_audio_listener_add(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_find_entities_by_mesh_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_ecs_find_entities_by_mesh_path(string meshPath, [Out] uint[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_find_entities_with", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_ecs_find_entities_with(string component, [Out] uint[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_count_entities_with", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_ecs_count_entities_with(string component);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_has_component", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_ecs_has_component(uint e, string component);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_get_queryable_components")]
    internal static partial int dse_ecs_get_queryable_components([Out] byte[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_get_world_aabb")]
    internal static partial int dse_ecs_get_world_aabb(uint e, out float outMinMax);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_get_local_aabb")]
    internal static partial int dse_ecs_get_local_aabb(uint e, out float outMinMax);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_set_time_scale")]
    internal static partial void dse_ecs_set_time_scale(uint e, float scale);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_get_time_scale")]
    internal static partial float dse_ecs_get_time_scale(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_add_transform")]
    internal static partial void dse_ecs_add_transform(uint e, float x, float y, float z, float sx, float sy, float sz);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_add_parent")]
    internal static partial void dse_ecs_add_parent(uint e, uint parent);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_set_parent")]
    internal static partial void dse_ecs_set_parent(uint e, uint parent);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_get_parent")]
    internal static partial uint dse_ecs_get_parent(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_clear_parent")]
    internal static partial void dse_ecs_clear_parent(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_add_script", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ecs_add_script(uint e, string path);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_set_script_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ecs_set_script_path(uint e, string path);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_get_script_path")]
    internal static partial int dse_ecs_get_script_path(uint e, [Out] byte[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_set_script_enabled")]
    internal static partial void dse_ecs_set_script_enabled(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_ecs_get_script_enabled")]
    internal static partial int dse_ecs_get_script_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_renderer")]
    internal static partial void dse_ui_add_renderer(uint e, uint textureHandle, float r, float g, float b, float a, int order, float w, float h);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_panel")]
    internal static partial void dse_ui_add_panel(uint e, int blocksInput);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_button")]
    internal static partial void dse_ui_add_button(uint e, float r, float g, float b, float a);

    [LibraryImport(Lib, EntryPoint = "dse_ui_add_ttf_label", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ui_add_ttf_label(uint e, string text, string fontId, float fontSize, float r, float g, float b, float a);

    [LibraryImport(Lib, EntryPoint = "dse_ui_set_label_text", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ui_set_label_text(uint e, string text);
